name:                montagy
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/montagy/montagy#readme
license:             BSD3
license-file:        LICENSE
author:              montagy
maintainer:          jencean@126.com
copyright:           None
category:            None
build-type:          Simple
cabal-version:       >=1.10

executable montagy
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll
